# practical-geometry-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindCGAL.cmake  FindOpenMesh.cmake
use_cgal/: CMakeLists.txt  README.md  main.cpp
use_libigl/: CMakeLists.txt  README.md  main.cpp
use_openmesh/: CMakeLists.txt  README.md  main.cpp
